test: update tests for page interface instead of list